# noflate

./: Cargo.toml  README.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
examples/: bench.rs  bench_checksum.rs  bench_wrappers.rs  io_bridge.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_deflate.rs  fuzz_gzip.rs  fuzz_zlib.rs
noflate/: SKILL.md
pbt/: Cargo.toml
pbt/tests/: proptest.rs
skills/noflate/: SKILL.md
src/: adler32.rs  bit.rs  buf.rs  crc32.rs  decode.rs  deflate.rs  encode.rs  error.rs  gzip.rs  huffman.rs  lib.rs  lz77.rs  symbol.rs  zlib.rs
tests/: incremental.rs  negative.rs  roundtrip.rs
