[package]
name = "noflate"
version = "0.0.4"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "A no_std sans-io DEFLATE / ZLIB / GZIP encoder and decoder with no dependencies"
homepage = "https://github.com/sile/noflate"
repository = "https://github.com/sile/noflate"
readme = "README.md"
categories = ["compression", "encoding", "no-std"]

[dependencies]

[dev-dependencies]
flate2 = "1"
crc32fast = "1"
adler32 = "1"

[workspace]
members = ["pbt"]
exclude = ["fuzz"]

