[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
noflate = { path = ".." }

[[bin]]
name = "fuzz_deflate"
path = "fuzz_targets/fuzz_deflate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_zlib"
path = "fuzz_targets/fuzz_zlib.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_gzip"
path = "fuzz_targets/fuzz_gzip.rs"
test = false
doc = false
bench = false
